feature: Novas Views e estilização.

--- a/src/app-web-backend/Views/Produtos/Create.cshtml
+++ b/src/app-web-backend/Views/Produtos/Create.cshtml
@@ -33,8 +33,8 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteId" class="control-label"></label>
-                <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
+                <label asp-for="ProdutoCategoriaId" class="control-label"></label>
+                <select asp-for="ProdutoCategoriaId" class ="form-control" asp-items="ViewBag.ProdutoCategoriaId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
