--- a/src/app-web-backend/Views/Produtos/Details.cshtml
+++ b/src/app-web-backend/Views/Produtos/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.Preco)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
+            @Html.DisplayNameFor(model => model.ProdutoCategoria)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.CNPJ)
+            @Html.DisplayFor(model => model.ProdutoCategoria.Descricao)
         </dd>
     </dl>
 </div>
