--- a/src/app-web-backend/Views/RestauranteMesas/Delete.cshtml
+++ b/src/app-web-backend/Views/RestauranteMesas/Delete.cshtml
@@ -24,15 +24,15 @@
             @Html.DisplayFor(model => model.TamanhoMesa)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
+            @Html.DisplayNameFor(model => model.RestauranteReserva)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.CNPJ)
+            @Html.DisplayFor(model => model.RestauranteReserva.RestauranteReservaId)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="RestauranteMesaId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
