--- a/src/app-web-backend/Views/Clientes/Create.cshtml
+++ b/src/app-web-backend/Views/Clientes/Create.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Papel" class="control-label"></label>
-                <select asp-for="Papel" class="form-control" asp-items="Html.GetEnumSelectList<Papel>()"></select>
+                <select asp-for="Papel" class="form-control"></select>
                 <span asp-validation-for="Papel" class="text-danger"></span>
             </div>
             <div class="form-group">
