--- a/src/app-web-backend/Views/Clientes/Edit.cshtml
+++ b/src/app-web-backend/Views/Clientes/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ClienteId" />
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
                 <input asp-for="CPF" class="form-control" />
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Papel" class="control-label"></label>
-                <select asp-for="Papel" class="form-control" asp-items="Html.GetEnumSelectList<Papel>()"></select>
+                <select asp-for="Papel" class="form-control"></select>
                 <span asp-validation-for="Papel" class="text-danger"></span>
             </div>
             <div class="form-group">
