--- a/src/app-web-backend/Views/ProdutoCategorias/Details.cshtml
+++ b/src/app-web-backend/Views/ProdutoCategorias/Details.cshtml
@@ -28,15 +28,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Imagem)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Produto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.Descricao)
-        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ProdutoCategoriaId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
