--- a/src/app-web-backend/Views/ProdutoCategorias/Index.cshtml
+++ b/src/app-web-backend/Views/ProdutoCategorias/Index.cshtml
@@ -6,9 +6,10 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<a asp-controller="Home" asp-action="Index" class="mx-2 btn bg-warning text-dark">Voltar</a>
+<div class="d-flex my-2">
+    <a asp-action="Create" class="mx-2 btn btn-outline-info">Adicionar novo categoria para produtos</a>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -20,9 +21,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Imagem)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Produto)
             </th>
             <th></th>
         </tr>
@@ -40,12 +38,9 @@
                 @Html.DisplayFor(modelItem => item.Imagem)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Produto.Descricao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ProdutoCategoriaId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ProdutoCategoriaId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ProdutoCategoriaId">Delete</a>
             </td>
         </tr>
 }
