--- a/src/app-web-backend/Views/Produtos/Delete.cshtml
+++ b/src/app-web-backend/Views/Produtos/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Preco)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
+            @Html.DisplayNameFor(model => model.ProdutoCategoria)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.CNPJ)
+            @Html.DisplayFor(model => model.ProdutoCategoria.Descricao)
         </dd class>
     </dl>
     
