--- a/src/app-web-backend/Views/Produtos/Index.cshtml
+++ b/src/app-web-backend/Views/Produtos/Index.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h4>Cardápio</h4>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    <a asp-controller="Home" asp-action="Index" class="mx-2 btn bg-warning text-dark">Voltar</a>
+<div class="d-flex my-2">
+    <a asp-action="Create" class="mx-2 btn btn-outline-info">Adicionar novo item ao cardápio</a>
+    <a asp-controller="ProdutoCategorias" asp-action="Index" class="mx-2 btn btn-outline-info">Nova Categoria de Produto</a>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -25,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.Preco)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Restaurante)
+                @Html.DisplayNameFor(model => model.ProdutoCategoria)
             </th>
             <th></th>
         </tr>
@@ -46,7 +48,7 @@
                 @Html.DisplayFor(modelItem => item.Preco)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Restaurante.CNPJ)
+                @Html.DisplayFor(modelItem => item.ProdutoCategoria.Descricao)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
