--- a/src/app-web-backend/Views/RestauranteMesas/Create.cshtml
+++ b/src/app-web-backend/Views/RestauranteMesas/Create.cshtml
@@ -23,8 +23,8 @@
                 <span asp-validation-for="TamanhoMesa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteId" class="control-label"></label>
-                <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
+                <label asp-for="RestauranteReservaId" class="control-label"></label>
+                <select asp-for="RestauranteReservaId" class ="form-control" asp-items="ViewBag.RestauranteReservaId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
