--- a/src/app-web-backend/Views/RestauranteMesas/Details.cshtml
+++ b/src/app-web-backend/Views/RestauranteMesas/Details.cshtml
@@ -23,14 +23,14 @@
             @Html.DisplayFor(model => model.TamanhoMesa)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
+            @Html.DisplayNameFor(model => model.RestauranteReserva)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.CNPJ)
+            @Html.DisplayFor(model => model.RestauranteReserva.RestauranteReservaId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.RestauranteMesaId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
