--- a/src/app-web-backend/Views/RestauranteMesas/Edit.cshtml
+++ b/src/app-web-backend/Views/RestauranteMesas/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="RestauranteMesaId" />
             <div class="form-group">
                 <label asp-for="QuantidadeMesa" class="control-label"></label>
                 <input asp-for="QuantidadeMesa" class="form-control" />
@@ -24,9 +24,9 @@
                 <span asp-validation-for="TamanhoMesa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteId" class="control-label"></label>
-                <select asp-for="RestauranteId" class="form-control" asp-items="ViewBag.RestauranteId"></select>
-                <span asp-validation-for="RestauranteId" class="text-danger"></span>
+                <label asp-for="RestauranteReservaId" class="control-label"></label>
+                <select asp-for="RestauranteReservaId" class="form-control" asp-items="ViewBag.RestauranteReservaId"></select>
+                <span asp-validation-for="RestauranteReservaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
