--- a/src/app-web-backend/Views/RestauranteReservas/Create.cshtml
+++ b/src/app-web-backend/Views/RestauranteReservas/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model fork_finder.Models.ProdutoCategoria
+﻿@model fork_finder.Models.RestauranteReserva
 
 @{
     ViewData["Title"] = "Create";
@@ -6,26 +6,26 @@
 
 <h1>Create</h1>
 
-<h4>ProdutoCategoria</h4>
+<h4>RestauranteReserva</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="DataHoraReserva" class="control-label"></label>
+                <input asp-for="DataHoraReserva" class="form-control" />
+                <span asp-validation-for="DataHoraReserva" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Imagem" class="control-label"></label>
-                <input asp-for="Imagem" class="form-control" />
-                <span asp-validation-for="Imagem" class="text-danger"></span>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Situacao" /> @Html.DisplayNameFor(model => model.Situacao)
+                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
