--- a/src/app-web-backend/Views/RestauranteReservas/Delete.cshtml
+++ b/src/app-web-backend/Views/RestauranteReservas/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model fork_finder.Models.ProdutoCategoria
+﻿@model fork_finder.Models.RestauranteReserva
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,14 +8,20 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProdutoCategoria</h4>
+    <h4>RestauranteReserva</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
+            @Html.DisplayNameFor(model => model.DataHoraCriacao)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
+            @Html.DisplayFor(model => model.DataHoraCriacao)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DataHoraReserva)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DataHoraReserva)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descricao)
@@ -24,15 +30,15 @@
             @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Imagem)
+            @Html.DisplayNameFor(model => model.Situacao)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Imagem)
+            @Html.DisplayFor(model => model.Situacao)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ProdutoCategoriaId" />
+        <input type="hidden" asp-for="RestauranteReservaId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
