--- a/src/app-web-backend/Views/Restaurantes/Create.cshtml
+++ b/src/app-web-backend/Views/Restaurantes/Create.cshtml
@@ -28,8 +28,8 @@
                 <span asp-validation-for="DescricaoRestaurante" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteEspecialidadeId" class="control-label"></label>
-                <select asp-for="RestauranteEspecialidadeId" class ="form-control" asp-items="ViewBag.RestauranteEspecialidadeId"></select>
+                <label asp-for="EspecialidadeId" class="control-label"></label>
+                <select asp-for="EspecialidadeId" class ="form-control" asp-items="ViewBag.EspecialidadeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -69,9 +69,120 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
+
+@*<div class="justify-content-center">
+    
+    <div class="row justify-content-center">
+        <h3 class="row justify-content-center">EM TESTE</h3>
+        <div class="col-md-auto card py-3" style="width: 26rem;">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active text-warning" id="home-tab" data-bs-toggle="tab" data-bs-target="#cliente-tab-pane"
+                            type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
+                        Cliente
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link text-warning" id="profile-tab" data-bs-toggle="tab" data-bs-target="#restaurante-tab-pane"
+                            type="button" role="tab" aria-controls="profile-tab-pane"
+                            aria-selected="false">
+                        Restaurante
+                    </button>
+                </li>
+
+            </ul>
+
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="cliente-tab-pane" role="tabpanel" aria-labelledby="cliente-tab" tabindex="0">
+
+                    @* <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <h4>Criar conta Cliente.</h4>
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group py-2">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control text-light" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group py-2">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="form-control text-light" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group py-2">
+                    <label asp-for="Input.ConfirmPassword"></label>
+                    <input asp-for="Input.ConfirmPassword" class="form-control text-light" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group text-end py-2">
+                    <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
+                    </div>
+                    </form>
+                </div>
+
+
+                <div class="tab-pane fade" id="restaurante-tab-pane" role="tabpanel" aria-labelledby="restaurante-tab" tabindex="0">
+
+                    <form asp-route-returnUrl="@Model" method="post">
+                        <h4>Criar uma conta Restaurate.</h4>
+                        <hr />
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Nome" class="control-label"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="CNPJ" class="control-label"></label>
+                            <input asp-for="CNPJ" class="form-control" />
+                            <span asp-validation-for="CNPJ" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="FotoPerfil" class="control-label"></label>
+                            <input asp-for="FotoPerfil" class="form-control" />
+                            <span asp-validation-for="FotoPerfil" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="DescricaoRestaurante" class="control-label"></label>
+                            <input asp-for="DescricaoRestaurante" class="form-control" />
+                            <span asp-validation-for="DescricaoRestaurante" class="text-danger"></span>
+                        </div>
+                        @*                        <div class="form-group">
+                        <label asp-for="EspecialidadeId" class="control-label"></label>
+                        <select asp-for="EspecialidadeId" class="form-control" asp-items="ViewBag.EspecialidadeId"></select>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Senha" class="control-label"></label>
+                            <input asp-for="Senha" class="form-control" />
+                            <span asp-validation-for="Senha" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Telefone" class="control-label"></label>
+                            <input asp-for="Telefone" class="form-control" />
+                            <span asp-validation-for="Telefone" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Idioma" class="control-label"></label>
+                            <input asp-for="Idioma" class="form-control" />
+                            <span asp-validation-for="Idioma" class="text-danger"></span>
+                        </div>
+                        <div class="form-group text-end py-2">
+                            <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>*@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
