--- a/src/app-web-backend/Views/Restaurantes/Delete.cshtml
+++ b/src/app-web-backend/Views/Restaurantes/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.DescricaoRestaurante)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RestauranteEspecialidade)
+            @Html.DisplayNameFor(model => model.Especialidade)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RestauranteEspecialidade.ImagemUpload)
+            @Html.DisplayFor(model => model.Especialidade.ImagemUpload)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
@@ -74,7 +74,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="RestauranteId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
