--- a/src/app-web-backend/Views/Restaurantes/Details.cshtml
+++ b/src/app-web-backend/Views/Restaurantes/Details.cshtml
@@ -4,35 +4,59 @@
     ViewData["Title"] = "Details";
 }
 
-<h4>Restaurante</h4>
+<h4>@Html.DisplayFor(model => model.Especialidade.NomeEspecialidade)</h4>
+<a asp-controller="Home" asp-action="Index" class="btn bg-warning text-dark">Voltar</a>
 <hr />
 <div class="container">
-    
+
     <div class="row">
-        <div class="col-4">
-            <dd class="col">
-                @Html.DisplayFor(model => model.RestauranteFotos)
-            </dd>
+        <div class="col-6">
+            <div class="col">
+                <img class="img-fluid restauranteFoto" src="@Html.DisplayFor(model => model.FotoPerfil)" alt="Foto Perfil Restaurante">
+            </div>
+            <div>
+
+                <img class="restauranteFotoA" src="@Html.DisplayFor(model => model.RestauranteFotos)" alt="Fotos do Restaurante">
+
+            </div>
         </div>
-        <div class="col-8">
-            
+        <div class="col-6">
+
             <div class="row">
-                <h3>
+                <h3 class="text-warning">
                     @Html.DisplayFor(model => model.Nome)
                 </h3>
                 <h5>
-                    @Html.DisplayFor(model => model.RestauranteEspecialidade.NomeEspecialidade)
+                    @Html.DisplayFor(model => model.DescricaoRestaurante)
                 </h5>
             </div>
-            
-                <p class="row">
-                    @Html.DisplayFor(model => model.DescricaoRestaurante)
+            <div class="row">
+                <p class="text-warning">
+                    @Html.DisplayFor(model => model.Endereco)
                 </p>
-            
+                <p>
+                    <i class="bi bi-star-fill text-warning"></i>
+                </p>
+                <p>
+                    <span class="material-symbols-outlined text-warning fs-1 align-content-center">
+                        accessible
+                    </span>
+                    <span class="material-symbols-outlined text-warning fs-1 justify-content-center">
+                        child_care
+                    </span>
+
+                </p>
+                <div class="row text-center">
+                    <div class="col justify-content-center">
+                        <a class="btn btn-success" asp-controller="Produtos" asp-action="Index">Cardápio</a>
+                        @*<a asp-controller="Produtos" asp-action="Create" class="btn btn-outline-info">Cardápio</a>*@
+                    </div>
+                    <div class="col justify-content-center">
+                        <a asp-controller="RestauranteReservas" asp-action="Create"
+                           class="btn bg-warning text-dark">Reservar</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
