--- a/src/app-web-backend/Views/Restaurantes/Edit.cshtml
+++ b/src/app-web-backend/Views/Restaurantes/Edit.cshtml
@@ -4,15 +4,18 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h4>Restaurante Perfil</h4>
 
-<h4>Restaurante</h4>
-<hr />
-<div class="row">
+    <a asp-controller="Home" asp-action="Index" class="mx-2 btn bg-warning text-dark">Voltar</a>
+<div class="d-flex my-2">
+    <a asp-controller="ReservaMesas" asp-action="Index" class="mx-2 btn btn-outline-info">Mesas</a>
+    <a asp-controller="Produtos" asp-action="Index" class="mx-2 btn btn-outline-info">Cardápio</a>
+</div>
+<div class="row justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="RestauranteId" />
             <div class="form-group">
                 <label asp-for="CNPJ" class="control-label"></label>
                 <input asp-for="CNPJ" class="form-control" />
@@ -22,6 +25,9 @@
                 <label asp-for="FotoPerfil" class="control-label"></label>
                 <input asp-for="FotoPerfil" class="form-control" />
                 <span asp-validation-for="FotoPerfil" class="text-danger"></span>
+                <div class="col">
+                    <img class="img-fluid restauranteFoto" src="@Html.DisplayFor(model => model.FotoPerfil)" alt="Foto Perfil Restaurante">
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="DescricaoRestaurante" class="control-label"></label>
@@ -29,9 +35,9 @@
                 <span asp-validation-for="DescricaoRestaurante" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteEspecialidadeId" class="control-label"></label>
-                <select asp-for="RestauranteEspecialidadeId" class="form-control" asp-items="ViewBag.RestauranteEspecialidadeId"></select>
-                <span asp-validation-for="RestauranteEspecialidadeId" class="text-danger"></span>
+                <label asp-for="EspecialidadeId" class="control-label"></label>
+                <select asp-for="EspecialidadeId" class="form-control" asp-items="ViewBag.EspecialidadeId"></select>
+                <span asp-validation-for="EspecialidadeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
