--- a/src/app-web-backend/Views/Shared/_Layout.cshtml
+++ b/src/app-web-backend/Views/Shared/_Layout.cshtml
@@ -9,11 +9,13 @@
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body class="bg-body-tertiary" data-bs-theme="dark">
+<body class="bg-body-secondary" data-bs-theme="dark">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3 --dark">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-body-tertiary box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="~/img/logo2.png" alt="ForkFinder_Logo" width="100" /></a>
@@ -36,19 +38,20 @@
                             @if (User.IsInRole("Restaurante"))
                             {*@
                                 <li class="nav-item">
-                                    <a class="nav-link text-warning" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                                    <a class="nav-link text-warning" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes Temp</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-warning" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
+                            <a class="nav-link text-warning" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes Temp</a>
                                 </li>
                           @*  }*@
                             <li class="nav-item">
-                                <a class="nav-link text-warning" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+                                <a class="nav-link text-warning" asp-area="" asp-controller="Produtos" asp-action="Index">Cardápio</a>
                             </li>
                        @* }*@
-                            <li class="nav-item">
-                                    <a class="nav-link text-warning" asp-area="" asp-controller="RestauranteEspecialidades" asp-action="Index">Especialidades</a>
-                                </li>
+                            
+                        <li class="nav-item">
+                            <a class="nav-link text-warning" asp-area="" asp-controller="Especialidades" asp-action="Index">Especialidades</a>
+                        </li>
                        @* }*@
                     </ul>
                     <partial name="_LoginPartial" />
@@ -61,7 +64,7 @@
         @RenderBody()
     </main>
 </div>
-    <div class="text-end">
+    <div class="position-absolute bottom-0 end-0">
         <img class="mascote" src="~/img/mascote.png" alt="mascote">
     </div>
     <footer class="border-top footer text-muted text-light">
