--- a/src/ForkFinder/Views/Restaurantes/Restaurant_List.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Restaurant_List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Especialidade_Restaurante>
+@model IEnumerable<Especialidade_Restaurante>
 
 @{
     ViewData["Title"] = "Tipo";
@@ -7,31 +7,23 @@
 <div>
     <h4>Restaurante por Especialidade</h4>
     <a class="btn btn-warning" asp-controller="Restaurantes" asp-action="Index">Voltar</a>
-    <hr />
-    <div>
-        @if (User.IsInRole("Admin, Restaurante"))
-        {
-            @foreach (var m in Model)
-        {
-                <a class="btn btn-primary align-items-end" asp-action="Edit" asp-route-id="@m.RestauranteId">Editar</a>
-            }
-
+    <hr/>
+    @*<div>
+        @if (Cliente.IsInRole("Admin, Restaurante"))
+        {       
+                <a class="btn btn-primary align-items-end" asp-action="Edit" asp-route-id="@Restaurante">Editar</a>
         }
-    </div>
+    </div>*@
     <div class="container">
         <div class="row align-items-center justify-content-start">
-
             @foreach (var item in Model)
             {
                 <div class="col-4">
                     <a asp-controller="Restaurantes" asp-action="Details" asp-route-id="@item.RestauranteId">
                         <div class="row align-items-center justify-content-start border">
                             <div class="col-4">
-
                                 <img src="@Html.DisplayFor(modelItem => item.Restaurante.FotoPerfil)">
-
                             </div>
-
                             <div class="col-8 my-0">
                                 <div class="row">
                                     <div class="col-12">
