--- a/src/ForkFinder/Views/Restaurantes/Index.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Index.cshtml
@@ -2,42 +2,56 @@
 @{
     ViewData["Title"] = "List of Restaurantes";
 }
-<div class="row">
-    <div class="col-md-8 offset-md-2">
-    <table class="table">
-        <thead>
-            <tr class="text-center">
-                <th>@Html.DisplayNameFor(model => model.FotoPerfil)</th>
-                <th>@Html.DisplayNameFor(model => model.Nome)</th>
-                <th>@Html.DisplayNameFor(model => model.CNPJ)</th>                
-                <th>@Html.DisplayNameFor(model => model.DescricaoRestaurante)</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(var item in Model)
+<div>
+    <div class="row">
+        <div class="col-4 justify-content-start">
+            <a class="btn btn-warning" asp-controller="Especialidades" asp-action="Index">Voltar</a>
+        </div>
+        <div class="col-4 ms-auto">
+            <h6>Restaurantes</h6>
+        </div>
+    </div>
+    <hr />
+    <div>
+        @*@if (User.IsInRole("Admin, Restaurante"))
+        {
+        <a class="btn btn-primary align-items-end" asp-action="Edit" asp-route-id="@Model">Editar</a>
+        }*@
+    </div>
+    <div class="container">
+        <div class="row align-items-center justify-content-start">
+            @foreach (var restaurantes in Model)
             {
-            <tr>
-                <td class="align-middle">
-                            <img class="rounded-circle" src="@item.FotoPerfil" alt="@item.Nome" style="max-width:150px; min-height:150px;" />
-                    </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.CNPJ)
-                </td>
-                <td class="align-middle">
-                    @Html.DisplayFor(modelItem => item.DescricaoRestaurante)
-                </td>
-                        <td class="align-middle">
-                            <a class="btn btn-outline-primary px-2 py-2"><i class="bi bi-pencil-square"></i></a> |
-                            <a class="btn btn-outline-info px-2 py-2"><i class="bi bi-eye"></i></a> |
-                            <a class="btn btn-danger text-white px-2 py-2"><i class="bi bi-trash"></i></a>
-                    </td>
+                <div class="col-4 m-0">
+                    <a asp-action="Restaurante" asp-route-id="@restaurantes.Id">
+                        <div class="row align-items-center justify-content-start">
+                                <div class="col-3 p-3">
+                                    <img class="rounded-circle" src="@Html.DisplayFor(modelItem => restaurantes.FotoPerfil)" style="max-width:100px; min-height:100px;" />
+                                </div>
+                                <div class="col-9">
+                                    <div class="row align-items-center m-2">
+                                        <div class="col text-decoration-none">
+                                            <div class="row m-0">
+                                                @Html.DisplayFor(modelItem => restaurantes.Nome)
+                                            </div>
+                                            <div class="row m-0">
+                                                <div class="col-6">
+                                                    <i class="bi bi-star-fill text-warning">@Html.DisplayFor(modelItem => restaurantes.Avaliacoes)</i>
+                                                </div>
+                                            </div>
+                                            <div class="row m-0">
+                                                @Html.DisplayFor(modelItem => restaurantes.Endereco.RestauranteId)
+                                                @Html.DisplayFor(modelItem => restaurantes.Endereco.Numero)
+                                            </div>
+                                        </div>
+                                    </div>
 
-            </tr>
+                                </div>
+                            </div>
+                        </a>
+                    </div>          
+          
             }
-        </tbody>
-    </table>
+
     </div>
 </div>
