--- a/src/ForkFinder/Views/Restaurantes/Restaurante.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Restaurante.cshtml
@@ -5,7 +5,7 @@
 }
 
 @*<h4>@Html.DisplayFor(model => model.Especialidade.NomeEspecialidade)</h4>*@
-<a asp-controller="Home" asp-action="Index" class="btn bg-warning text-dark">Voltar</a>
+<a href="javascript: history.go(-1)" class="btn bg-warning text-dark">Voltar</a>
 <hr />
 <div class="container">
 
@@ -52,8 +52,7 @@
                         @*<a asp-controller="Produtos" asp-action="Create" class="btn btn-outline-info">Cardápio</a>*@
                     </div>
                     <div class="col justify-content-center">
-                        @*<a asp-controller="RestauranteReservas" asp-action="Create"
-                           class="btn bg-warning text-dark">Reservar</a>*@
+                        <a asp-controller="Restaurantes" asp-action="Mesas" asp-route-id="@Model.Id" class="btn bg-warning text-dark">Reservar</a>
                     </div>
                 </div>
             </div>
