--- a/src/ForkFinder/Views/Shared/_Layout.cshtml
+++ b/src/ForkFinder/Views/Shared/_Layout.cshtml
@@ -6,17 +6,17 @@
     <title>@ViewData["Title"] - ForkFinder</title>
     <link rel="icon" type="image/x-icon" href="~/img/logo.png">
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/site.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    
 </head>
 <body class="bg-body-secondary" data-bs-theme="dark">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-body-tertiary box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="" asp-controller="Especialidades" asp-action="Index">
                 <img src="~/img/logo2.png" alt="ForkFinder_Logo" width="100" /></a>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -27,25 +27,25 @@
 
                     <ul class="navbar-nav flex-grow-1 justify-content-end px-2">
                     
-                        <li class="nav-item">
+                       @* <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>*@
                        @* @if (User.Identity.IsAuthenticated)
                         {
                         @if (User.IsInRole("Admin"))
                         {
                             @if (User.IsInRole("Restaurante"))
                             {*@
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a class="nav-link text-warning" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes Temp</a>
-                                </li>
+                        </li>*@
                                 <li class="nav-item">
-                            <a class="nav-link text-warning" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes Temp</a>
+                            <a class="nav-link text-warning" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
                                 </li>
                           @*  }*@
-                            <li class="nav-item">
+                            @*<li class="nav-item">
                                 <a class="nav-link text-warning" asp-area="" asp-controller="Produtos" asp-action="Index">Cardápio</a>
-                            </li>
+                            </li>*@
                        @* }*@
                             
                         <li class="nav-item">
@@ -58,7 +58,7 @@
             </div>
         </nav>
     </header>
-<div class="container-fluid text-light">
+<div class="mx-4 container-fluid text-light">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
@@ -66,7 +66,7 @@
     <div class="position-absolute bottom-0 end-0">
         <img class="mascote" src="~/img/mascote.png" alt="mascote">
     </div>
-    <footer class="border-top footer text-muted text-light">
+    <footer class="footer text-muted text-light">
         <div class="container">
             &copy; 2023 - ForkFinder
         </div>
@@ -74,6 +74,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
