--- a/src/ForkFinder/Views/Clientes/Index.cshtml
+++ b/src/ForkFinder/Views/Clientes/Index.cshtml
@@ -32,7 +32,7 @@
                 </td>
                         
                     <td class="align-middle">
-                            <a class="btn btn-outline-primary" asp-controller="Clientes" asp-action="Reserved" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a> |
+                            <a class="btn btn-outline-primary" asp-controller="Clientes" asp-action="Reserved" asp-route-id="@item.ClienteId"><i class="bi bi-pencil-square"></i></a> |
                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i></a> |
                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i></a>
                     </td>
