--- a/src/ForkFinder/wwwroot/css/site.css
+++ b/src/ForkFinder/wwwroot/css/site.css
@@ -117,6 +117,7 @@ img .mascote {
     width: 225px;
     height: 378px;
     right: 0px;
+    z-index:0;
 }
 
 .restauranteFoto {
@@ -124,6 +125,8 @@ img .mascote {
 }
 
 .restauranteFotoA {
-    width: 50px;
-    height: 50px;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
 }
