--- a/src/ForkFinder/Views/Restaurantes/Restaurante.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Restaurante.cshtml
@@ -57,7 +57,7 @@
                         @*<a asp-controller="Produtos" asp-action="Create" class="btn btn-outline-info">Cardápio</a>*@
                     </div>
                     <div class="col justify-content-center">
-                        <a asp-controller="Restaurantes" asp-action="Mesas" asp-route-id="@Model.Id" class="btn bg-warning text-dark">Reservar</a>
+                        <a asp-controller="Restaurantes" asp-action="Mesas" asp-route-id="@Model.RestauranteId" class="btn bg-warning text-dark">Reservar</a>
                     </div>
                 </div>
             </div>
