--- a/src/ForkFinder/Views/Mesas/Index.cshtml
+++ b/src/ForkFinder/Views/Mesas/Index.cshtml
@@ -17,7 +17,7 @@
                 {
                     <tr>
                         <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Restaurante.Id)
+                            @Html.DisplayFor(modelItem => item.Restaurante.RestauranteId)
                         </td>
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.QuantidadeMesa)
