--- a/src/ForkFinder/Views/Restaurantes/Agenda.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Agenda.cshtml
@@ -8,17 +8,17 @@
 
 <div id="dateCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        @for (int i = 0; i < Model.Datas.Count; i++)
+        @for (int i = 0; i < Model.DataMesas.Count; i++) //bug parece que ta na lista que ta carregando. Como ta chamando uma lista DataTime ta bugando. Tenta por o nome do namespace
         {
             <li data-target="#dateCarousel" data-slide-to="@i" class="@(i == 0 ? "active" : "")"></li>
         }
     </ol>
 
     <div class="carousel-inner">
-        @for (int i = 0; i < Model.Datas.Count; i++)
+        @for (int i = 0; i < Model.DataMesas.Count; i++)
         {
             <div class="carousel-item @(i == 0 ? "active" : "")">
-                <h4 class="text-center">@Model.Datas[i].ToString("dd/MM/yyyy")</h4>
+                <h4 class="text-center">@Model.DataMesas[i].ToString("dd/MM/yyyy")</h4>
             </div>
         }
     </div>
