feature: agenda-etapa-3 concluída

--- a/src/ForkFinder/Views/Especialidades/Index.cshtml
+++ b/src/ForkFinder/Views/Especialidades/Index.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-<div class="mainEspecialidades container text-center">
+<div class="my-2 p-2">
+<h4 class="text-center">Plataforma de reserva de mesa em restaurantes.<br />
+    Busque por preferência alimentar, disponibilidade, acessibilidade ou avaliação de outros clientes.</h4>
+</div>
+<div class="mainEspecialidades container text-center my-2">
     <div class="row row-cols-4 m-auto">
 @foreach (var item in Model) {
 
