--- a/src/ForkFinder/Views/Restaurantes/Index.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Index.cshtml
@@ -8,7 +8,7 @@
             <a class="btn btn-warning" asp-controller="Especialidades" asp-action="Index">Voltar</a>
         </div>
         <div class="col-4 ms-auto">
-            <h6>Restaurantes</h6>
+            <h6>Todos Restaurantes</h6>
         </div>
     </div>
     <hr />
@@ -60,7 +60,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <p class="p-0 m-1 text-warning">Sem avaliações</p>
+                                                    <p class="p-0 m-1 text-info">Sem avaliações</p>
                                                 }
                                             </div>
                                             <div class="col-5">
