--- a/src/ForkFinder/wwwroot/css/site.css
+++ b/src/ForkFinder/wwwroot/css/site.css
@@ -119,6 +119,9 @@ img .mascote {
     right: 0px;
     z-index:0;
 }
+.mascotemais {
+    min-height: calc(100vh + 378px);
+}
 
 .restauranteFoto {
     width: 300px;
