--- a/src/ForkFinder/Views/Shared/_Layout.cshtml
+++ b/src/ForkFinder/Views/Shared/_Layout.cshtml
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     
 </head>
-<body class="bg-body-secondary" data-bs-theme="dark">
+<body class="bg-body-secondary d-flex flex-column h-100 mb-378" data-bs-theme="dark">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-body-tertiary box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3">
+            @*bg-body-tertiary*@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Especialidades" asp-action="Index">
                 <img src="~/img/logo2.png" alt="ForkFinder_Logo" width="100" /></a>
@@ -58,15 +59,17 @@
                 </div>
             </div>
         </nav>
+        
     </header>
-    <div class="mx-4 container-fluid text-light z-3">
-    <main role="main" class="pb-3">
+    <div class="m-0 container-fluid text-light">
+        <main role="main" class="mascotemais wrapper flex-grow-1">
         @RenderBody()
+            <div class="position-absolute end-0 z-n1">
+                <img class="mascote" src="~/img/mascote.png" alt="mascote">
+            </div>
     </main>
 </div>
-    <div class="position-absolute bottom-0 end-0 z-n1">
-        <img class="mascote" src="~/img/mascote.png" alt="mascote">
-    </div>
+    
     <footer class="footer text-muted text-light">
         <div class="container">
             &copy; 2023 - ForkFinder
